Issue 55 - Upgrade to Trino 390, improved user guide, removed unnecessary dependencies